# knowledge-graph-datasets

./: .gitignore  README.md
foursquare/: Makefile  README.md  config.env.example  foursquare_import_neo4j.py  neo4j_schema.cypher  pytest.ini  routing_queries.py  sample_queries_neo4j.py  test_config.env.example
foursquare/tests/: README.md  __init__.py  conftest.py  test_data_validation.py  test_foursquare_import.py  test_geospatial_queries.py  test_integration.py
foursquare/tests/fixtures/: test_data_generator.py
gtfs/: CONVERSION_SUMMARY.md  Makefile  Makefile.neo4j  README-Neo4j.md  README.md  config.env.example  config.env.neo4j.example  dgraph_config.py  docker-compose-neo4j.yml  docker-compose.yml  gtfs_import.py  gtfs_import_neo4j.py  neo4j_config.py  neo4j_schema.cypher  pyproject.toml  sample_queries.py  sample_queries_neo4j.py  setup_uv.sh  simple_schema.txt  start_dgraph.sh  start_neo4j.sh  test_connection.py  test_connection_neo4j.py  test_gtfs_data.py
news/: Makefile  README.md  ai_provider.py  check_geo_status.py  config.env.example  dgraph_config.py  docker-compose.yml  geocode_geo_nodes.py  neo4j_config.py  news_embeddings.py  news_embeddings_neo4j.py  news_import.py  news_import_neo4j.py  news_import_neo4j_optimized.py  pyproject.toml  sample_queries.py  sample_queries_neo4j.py  schema.cypher  schema.dql  setup_uv.sh  start_dgraph.sh  start_neo4j.sh  test_news_data.py  test_news_data_neo4j.py  vector_search.py  vector_search_neo4j.py
news/news-explorer/: README.md  package-lock.json  package.json
news/news-explorer/src/app/: layout.tsx  page.tsx  providers.tsx
news/news-explorer/src/app/api/articles/[uri]/graph/: route.ts
news/news-explorer/src/app/api/articles/geo/: route.ts
news/news-explorer/src/app/api/articles/recent/: route.ts
news/news-explorer/src/app/api/chat/: route.ts
news/news-explorer/src/app/api/search/: route.ts
news/news-explorer/src/app/api/stats/: route.ts
news/news-explorer/src/components/: NewsChat.tsx  NewsGraph.tsx  NewsMap.tsx
news/news-explorer/src/lib/: neo4j.ts
openstreetmap/: .gitignore  Makefile  README.md  config.env.example  dgraph_config.py  docker-compose.yml  neo4j_config.py  osm_import.py  osm_import_enhanced.py  pyproject.toml  sample_queries.py  setup_uv.sh  simple_schema.txt  start_dgraph.sh  start_neo4j.sh  test_osm_data.py
openstreetmap/tests/: test_osm_to_rdf.py
